[project]
name = "ai-agent-temporal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.124.4",
    "jinja2>=3.1.6",
    "litellm>=1.80.10",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "stripe>=14.1.0",
    "temporalio>=1.20.0",
    "uvicorn>=0.38.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Tell hatchling what to include
[tool.hatch.build.targets.wheel]
packages = ["activities", "api", "models", "prompts", "shared", "tools", "workflows"]
